fix issue on delete function on mobiles devices

--- a/baraton-app/src/assets/ProfileCar/ProfileCar.css
+++ b/baraton-app/src/assets/ProfileCar/ProfileCar.css
@@ -21,6 +21,7 @@ p {
   float: left;
   top: 6px;
   color: #f544ad;
+  z-index: 2;
 }
 .order-elements {
   border-right: 1px dashed #f50057;
